<resources>
    <string name="APP_Description">"Free and open source car management software."</string>
    <string name="APP_Motto">"Manage your cars with the power of open source."</string>
    <string name="APP_Activity_DriverEdit">"Edit driver"</string>
    <string name="APP_Activity_DriverList">"Drivers"</string>
    <string name="APP_Activity_CarEdit">"Edit car"</string>
    <string name="APP_Activity_CarList">"Cars"</string>
    <string name="APP_Activity_Preferences">"Preferences"</string>
    <string name="APP_Activity_GPSPreferences">"GPS Tracking Preferences"</string>
    <string name="APP_Activity_ExpenseCategoryList">"Expense categories"</string>
    <string name="APP_Activity_ExpenseCategoryEdit">"Edit expense category"</string>
    <string name="APP_Activity_ExpenseTypeList">"Expense types"</string>
    <string name="APP_Activity_ExpenseTypeEdit">"Edit expense type"</string>
    <string name="APP_Activity_UOMList">"Measurement units"</string>
    <string name="APP_Activity_UOMEdit">"Edit UOM"</string>
    <string name="APP_Activity_UOMConversionList">"UOM Conversions"</string>
    <string name="APP_Activity_UOMConversionEdit">"Edit UOM Conversion"</string>
    <string name="APP_Activity_CurrencyList">"Currencies"</string>
    <string name="APP_Activity_CurrencyEdit">"Edit currency"</string>
    <string name="APP_Activity_MileageList">"Mileages"</string>
    <string name="APP_Activity_MileageEdit">"Add or edit mileage"</string>
    <string name="APP_Activity_RefuelList">"Refuels"</string>
    <string name="APP_Activity_RefuelEdit">"Add or edit refuel"</string>
    <string name="APP_Activity_About">"About AndiCar"</string>
    <string name="APP_Activity_BackupRestore">"Backup / restore"</string>
    <string name="APP_Activity_ExpenseList">"Expenses"</string>
    <string name="APP_Activity_ExpenseEdit">"Add or edit expense"</string>
    <string name="APP_Activity_CurrencyRateList">"Currency rates"</string>
    <string name="APP_Activity_CurrencyRateEdit">"Add or edit currency rates"</string>
    <string name="APP_Activity_GPSTrackController">"GPS Track Control"</string>
    <string name="APP_Activity_GPSTrackEdit">"Edit GPS Track"</string>
    <string name="APP_Activity_GPSTrackList">"GPS Tracks"</string>
    <string name="APP_Activity_BPartnerList">"Partners"</string>
    <string name="APP_Activity_BPartnerEdit">"Edit partner, location"</string>
    <string name="APP_Activity_BPartnerLocationEdit">"Edit location"</string>
    <string name="APP_Activity_TagList">"Tags"</string>
    <string name="APP_Activity_TagEdit">"Edit tag"</string>
    <string name="APP_Activity_Message">"AndiCar Message"</string>
    <string name="APP_Activity_TaskTypeList">"Task types"</string>
    <string name="APP_Activity_TaskTypeEdit">"Edit task type"</string>
    <string name="APP_Activity_TaskList">"Tasks"</string>
    <string name="APP_Activity_TaskEdit">"Add or edit task"</string>
    <string name="APP_Activity_TodoList">"To-Do List"</string>
    <string name="APP_Activity_FuelCategoryList">"Fuel categories"</string>
    <string name="APP_Activity_FuelCategoryEdit">"Edit fuel category"</string>
    <string name="APP_Activity_ReimbursementRateEdit">"Edit rate"</string>
    <string name="APP_Activity_ReimbursementList">"Reimbursement rates"</string>
    <string name="GEN_OK">"OK"</string>
    <string name="GEN_CANCEL">"Cancel"</string>
    <string name="GEN_YES">"Yes"</string>
    <string name="GEN_NO">"No"</string>
    <string name="GEN_Done">"Done"</string>
    <string name="GEN_FillMandatory">"Fill mandatory field"</string>
    <string name="GEN_NumberFormatException">"Invalid number"</string>
    <string name="GEN_ChooseOneTitle">"Choose one"</string>
    <string name="GEN_ChooseOneMessage">"You must choose at least one"</string>
    <string name="GEN_ChooseTitle">"Choose"</string>
    <string name="GEN_IsActiveLabel">"Active"</string>
    <string name="GEN_UserCommentLabel">"Comment"</string>
    <string name="GEN_NameLabel">"Name:"</string>
    <string name="GEN_DateTimeLabel">"Date and time:"</string>
    <string name="GEN_PickDateCaption">"Change date"</string>
    <string name="GEN_PickTimeCaption">"Change time"</string>
    <string name="GEN_DeleteConfirmation">"Are you sure you want to delete the selected record?"</string>
    <string name="GEN_Refuel">"Refuel"</string>
    <string name="GEN_CarLabel">"Car:"</string>
    <string name="GEN_DriverLabel">"Driver:"</string>
    <string name="GEN_ExpenseTypeLabel">"Type:"</string>
    <string name="GEN_TypeLabel">"Type:"</string>
    <string name="GEN_DocumentNoLabel">"Document no.:"</string>
    <string name="GEN_IndexLabel">"Odometer:"</string>
    <string name="GEN_QuantityLabel">"Quantity:"</string>
    <string name="GEN_PriceLabel">"Price"</string>
    <string name="GEN_AmountLabel">"Amt"</string>
    <string name="GEN_ConversionRateLabel">"Rate:"</string>
    <string name="GEN_ConvertedAmountLabel">"Amt. [#1]"</string>
    <string name="GEN_ConvertedPriceLabel">"Price [#1]"</string>
    <string name="GEN_SelectedMessage">" selected"</string>
    <string name="GEN_CurrencyLabel">"Currency"</string>
    <string name="GEN_Required">"Required"</string>
    <string name="GEN_BPartner">"Vendor:"</string>
    <string name="GEN_Address">"Address:"</string>
    <string name="GEN_BPartnerAdressInfo">"More details in Preferences -> Partners"</string>
    <string name="GEN_City">"City:"</string>
    <string name="GEN_Region">"Region:"</string>
    <string name="GEN_Country">"Country:"</string>
    <string name="GEN_Contact">"Contact:"</string>
    <string name="GEN_Phone">"Phone:"</string>
    <string name="GEN_Phone2">"Phone 2:"</string>
    <string name="GEN_Fax">"Fax:"</string>
    <string name="GEN_Email">"Email:"</string>
    <string name="GEN_Postal">"Postal:"</string>
    <string name="GEN_Tag">"Tag:"</string>
    <string name="GEN_TagHint">"Short tag. Write comment bellow."</string>
    <string name="GEN_LifeTime">"Life time"</string>
    <string name="GEN_CreatedOn">"Created on"</string>
    <string name="GEN_Category">"Category:"</string>
    <string name="GEN_UOM">"UOM:"</string>
    <string name="GEN_MailSent">"Mail sent"</string>
    <string name="GEN_Password">"Password"</string>
    <string name="GEN_ShowNotification">"Show notification"</string>
    <string name="GEN_Error">"Error"</string>
    <string name="GEN_Confirm">"Confirmation"</string>
    <string name="GEN_Info">"Info"</string>
    <string name="GEN_Warning">"Warning"</string>
    <string name="GEN_TaskType">"Task type:"</string>
    <string name="GEN_SetDate">"Set date/time"</string>
    <string name="GEN_On">"On"</string>
    <string name="GEN_Days">"days"</string>
    <string name="GEN_Minutes">"minutes"</string>
    <string name="GEN_Min">"min"</string>
    <string name="GEN_LastDay">"last day"</string>
    <string name="GEN_Description">"Description"</string>
    <string name="GEN_Or">"Or:"</string>
    <string name="GEN_TaskLabel">"Task:"</string>
    <string name="GEN_StatusLabel">"Status:"</string>
    <string name="GEN_Mileage">"mileage:"</string>
    <string name="GEN_Or2">"or"</string>
    <string name="GEN_ToDo">"To-Do"</string>
    <string name="GEN_ToDoAlert">"To-Do alert"</string>
    <string name="GEN_New">"New"</string>
    <string name="GEN_Update">"Update"</string>
    <string name="GEN_FuelEff">"Fuel eff.:"</string>
    <string name="GEN_StartLabel">"Start "</string>
    <string name="GEN_StopLabel">"Stop"</string>
    <string name="GEN_PaymentFailed">"Payment failed"</string>
    <string name="GEN_PaymentNotConfirmed">"Payment not confirmed"</string>
    <string name="GEN_CarierBillingCheckWait">"Checking carier billing availability. Please wait a moment ..."</string>
    <string name="GEN_ValidFromLabel">"Valid from:"</string>
    <string name="GEN_ValidToLabel">"Valid to:"</string>
    <string name="GEN_Reimbursement">"Reimbursement:"</string>
    <string name="MENU_PreferencesCaption">"Preferences"</string>
    <string name="MENU_AboutCaption">"About"</string>
    <string name="MENU_DeleteCaption">"Delete"</string>
    <string name="MENU_AddNewCaption">"Add new"</string>
    <string name="MENU_EditCaption">"Edit"</string>
    <string name="MENU_ShowInactiveCaption">"Show inactive"</string>
    <string name="MENU_HideInactiveCaption">"Hide inactive"</string>
    <string name="MENU_SearchCaption">"Search/filter"</string>
    <string name="MENU_CreateReportCaption">"Create report"</string>
    <string name="MENU_SendAsEmailCaption">"Send / Upload"</string>
    <string name="MENU_ShowOnMap">"Show on map"</string>
    <string name="MENU_MileageCaption">"Mileages"</string>
    <string name="MENU_RefuelCaption">"Refuels"</string>
    <string name="MENU_ExpenseCaption">"Expenses"</string>
    <string name="MENU_GPSTrackCaption">"GPS Tracks"</string>
    <string name="MENU_SetDefault">"Set default"</string>
    <string name="MENU_OpenGPSTrack">"Open GPS track"</string>
    <string name="MENU_RateCommentCaption">"Rate/Comment"</string>
    <string name="MENU_AddOnServicesCaption">"Extensions</string>
    <string name="MENU_LocalizeAndiCar">"Translate AndiCar"</string>
    <string name="MENU_TaskReminderCaption">"Task"</string>
    <string name="MENU_TodoCaption">"To-Do List"</string>
    <string name="MainActivity_MileageHeaderCaption">"Last mileage"</string>
    <string name="MainActivity_RefuelHeaderCaption">"Last refuel"</string>
    <string name="MainActivity_GPSTrackHeaderCaption">"Last GPS track"</string>
    <string name="MainActivity_ExpenseHeaderCaption">"Last expense"</string>
    <string name="MainActivity_StatisticsHeaderCaption">"Statistics for the registered "</string>
    <string name="MainActivity_StatisticsListLastOdoLabel">"Last known odometer: "</string>
    <string name="MainActivity_StatisticsAvgConsLabel">"Avg. fuel eff.: "</string>
    <string name="MainActivity_StatisticsAvgConsNoDataText">"N/A. The avg. fuel efficiency is calculated for the first and last full refuels."</string>
    <string name="MainActivity_StatisticsLastConsLabel">"Last fuel eff.: "</string>
    <string name="MainActivity_StatisticsLastConsNoData">"N/A. The last fuel efficiency is calculated for the last two full refuels."</string>
    <string name="MainActivity_StatisticsTotalExpenseLabel">"Total expenses:"</string>
    <string name="MainActivity_StatisticsMileageExpenseLabel">"Mileage exp.:"</string>
    <string name="CarEditActivity_ModelLabel">"Model:"</string>
    <string name="CarEditActivity_LicensePlateLabel">"License plate:"</string>
    <string name="CarEditActivity_UOMLengthLabel">"UOM for distance:"</string>
    <string name="CarEditActivity_UOMVolumeLabel">"UOM for volume:"</string>
    <string name="CarEditActivity_IndexStartLabel">"Initial odometer:"</string>
    <string name="CarEditActivity_CurrencyLabel">"Default currency:"</string>
    <string name="BackupRestoreEditActivity_BackupBtnCaption">"Backup"</string>
    <string name="BackupRestoreEditActivity_RestoreBtnCaption">"Restore"</string>
    <string name="BackupRestoreEditActivity_DeleteBkBtnCaption">"Delete"</string>
    <string name="BackupRestoreEditActivity_BackupListLabel">"Existing backups:"</string>
    <string name="DayOfWeek_0">"Sunday"</string>
    <string name="DayOfWeek_1">"Monday"</string>
    <string name="DayOfWeek_2">"Tuesday"</string>
    <string name="DayOfWeek_3">"Wednesday"</string>
    <string name="DayOfWeek_4">"Thursday"</string>
    <string name="DayOfWeek_5">"Friday"</string>
    <string name="DayOfWeek_6">"Saturday"</string>
    <string name="AddOn_AutoBackupService_ScheduleFrequency">"Frequency:"</string>
    <string name="AddOn_AutoBackupService_ScheduleHour">"Hour:"</string>
    <string name="AddOn_AutoBackupService_NoOfBackups1">"Keep only the last"</string>
    <string name="AddOn_AutoBackupService_NoOfBackups2">"backups."</string>
    <string name="AddOn_AutoBackupService_NotifyIfSuccess">"Notify on success"</string>
</resources>