<?xml version="1.0" encoding="utf-8"?>
<!--
 AndiCar - a car management software for Android powered devices.

 Copyright (C) 2010 Miklos Keresztes (miklos.keresztes@gmail.com)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_marginRight="5dp"
	android:id="@+id/vgRoot"
	>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginRight="5dp"
       	android:id="@+id/fakeFocus"
		android:focusable="true"
		android:focusableInTouchMode="true" 
        />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
    	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <ImageButton
            android:id="@android:id/closeButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_cancel_selector"
            />
        <ImageButton
            android:id="@android:id/button1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_done_selector"
            />
    </RelativeLayout>
    <TextView
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="@android:color/background_dark"
        android:layout_marginTop="5dp"
        />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
	    	android:paddingLeft="5dp"
	        android:layout_marginRight="5dp"
            >

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                >
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/AddOn_AutoBackupService_ScheduleFrequency"
	                android:typeface="sans"
            		android:layout_alignParentLeft="true"
            		android:layout_centerVertical="true"
                    android:textSize="17sp"
	            />
		        <Spinner android:id="@+id/spnScheduleFrequency"
		            android:layout_width="200dp"
		            android:layout_height="wrap_content"
		            android:drawSelectorOnTop="true"
		            android:prompt="@string/GEN_ChooseOneTitle"
					android:layout_alignParentRight="true"
            		android:layout_centerVertical="true" 
		        />
	        </RelativeLayout>

			<TableLayout android:id="@+id/tlDayList"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content">

				<TableRow>
		            <CheckBox
		                android:id="@+id/ckDayOfWeek0"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/DayOfWeek_0"
		                android:typeface="sans"
                    	android:textSize="17sp"
		                />
		            <CheckBox
		                android:id="@+id/ckDayOfWeek1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/DayOfWeek_1"
		                android:typeface="sans"
                    	android:textSize="17sp"
		                />
                </TableRow>
				<TableRow>
		            <CheckBox
		                android:id="@+id/ckDayOfWeek2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/DayOfWeek_2"
		                android:typeface="sans"
                    	android:textSize="17sp"
		                />
		            <CheckBox
		                android:id="@+id/ckDayOfWeek3"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/DayOfWeek_3"
		                android:typeface="sans"
                    	android:textSize="17sp"
		                />
                </TableRow>
				<TableRow>
		            <CheckBox
		                android:id="@+id/ckDayOfWeek4"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/DayOfWeek_4"
		                android:typeface="sans"
                    	android:textSize="17sp"
		                />
		            <CheckBox
		                android:id="@+id/ckDayOfWeek5"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/DayOfWeek_5"
		                android:typeface="sans"
                    	android:textSize="17sp"
		                />
                </TableRow>
				<TableRow>
		            <CheckBox
		                android:id="@+id/ckDayOfWeek6"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/DayOfWeek_6"
		                android:typeface="sans"
                    	android:textSize="17sp"
		                />
                </TableRow>
            </TableLayout>
            <LinearLayout
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:gravity="center_vertical"
	            android:layout_marginTop="5dp"
               >
               <TextView
					android:id="@+id/tvHourLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:typeface="sans"
					android:gravity="center_vertical"
					android:text="@string/AddOn_AutoBackupService_ScheduleHour"
					android:textSize="17sp"
                   />
               <TextView
					android:id="@+id/tvDateTimeValue"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:typeface="sans"
					android:gravity="center_vertical"
					android:layout_marginLeft="5dp"
					android:textSize="17sp"
                   />
                <ImageButton android:id="@+id/btnPickTime"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_clock_selector"
                        />
            </LinearLayout>
	
            <LinearLayout
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical"
	            android:layout_marginTop="5dp"
               >
               <TextView
					android:id="@+id/tvKeepLast1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:typeface="sans"
					android:text="@string/AddOn_AutoBackupService_NoOfBackups1"
					android:textSize="16sp"
                   />
                <EditText
                    android:id="@+id/etKeepLastNo"
                    android:layout_marginLeft="2dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:digits="1234567890"
                    android:tag="@string/AddOn_AutoBackupService_NoOfBackups2"
                    android:hint="@string/GEN_Required"
                    />
               <TextView
					android:id="@+id/tvKeepLast2"
					android:layout_marginLeft="2dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:typeface="sans"
					android:text="@string/AddOn_AutoBackupService_NoOfBackups2"
					android:textSize="16sp"
                   />
            </LinearLayout>

            <CheckBox
                android:id="@+id/ckNotifyIfSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AddOn_AutoBackupService_NotifyIfSuccess"
                android:typeface="sans"
				android:textSize="17sp"
                />
		    <TextView
		        android:layout_height="1dp"
		        android:layout_width="fill_parent"
		        android:background="@android:color/background_dark"
		        android:layout_marginTop="5dp"
		        />

            <CheckBox
                android:id="@+id/ckIsActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GEN_IsActiveLabel"
                android:typeface="sans"
				android:textSize="17sp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>