<?xml version="1.0" encoding="utf-8"?>
<!--
 AndiCar - a car management software for Android powered devices.

 Copyright (C) 2010 Miklos Keresztes (miklos.keresztes@gmail.com)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:id="@+id/vgRoot"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dip"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >
            <TextView
                android:id="@+id/tvNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GEN_NameLabel"
                />
            <EditText
                android:id="@+id/etName"
                android:layout_marginLeft="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:tag="@string/GEN_NameLabel"
                android:background="@color/mandatory_bg"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >
            <TextView
                android:id="@+id/tvCarRegNoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CarEditActivity_LicensePlateLabel"
                />
            <EditText
                android:id="@+id/etCarRegNo"
                android:layout_marginLeft="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:tag="@string/CarEditActivity_LicensePlateLabel"
                android:background="@color/mandatory_bg"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >
            <TextView
                android:id="@+id/tvIndexStartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CarEditActivity_IndexStartLabel"
                />
            <EditText
                android:id="@+id/etIndexStart"
                android:layout_marginLeft="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numeric="decimal"
                android:tag="@string/CarEditActivity_IndexStartLabel"
                android:background="@color/mandatory_bg"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CarEditActivity_UOMLengthLabel"
            />
            <Spinner android:id="@+id/spnUomLength"
                android:layout_marginLeft="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:background="@color/mandatory_bg"
                android:prompt="@string/GEN_ChooseOneTitle"
            />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CarEditActivity_UOMVolumeLabel"
            />
            <Spinner android:id="@+id/spnUomVolume"
                android:layout_marginLeft="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:background="@color/mandatory_bg"
                android:prompt="@string/GEN_ChooseOneTitle"
            />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CarEditActivity_CurrencyLabel"
            />
            <Spinner android:id="@+id/spnCurrency"
                android:layout_marginLeft="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:background="@color/mandatory_bg"
                android:prompt="@string/GEN_ChooseOneTitle"
            />
        </LinearLayout>

        <CheckBox
            android:id="@+id/ckIsActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GEN_IsActiveLabel"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            >
            <TextView
                android:id="@+id/tvModelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CarEditActivity_ModelLabel"
                />
            <EditText
                android:id="@+id/etCarModel"
                android:layout_marginLeft="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tvUserCommentLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/GEN_UserCommentLabel"
            />
        <EditText
            android:id="@+id/etUserComment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@android:id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dip"
                android:text="@string/GEN_OK"
                />

            <Button
                android:id="@android:id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@android:id/button1"
                android:layout_alignTop="@android:id/button1"
                android:text="@string/GEN_CANCEL"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>