<?xml version="1.0" encoding="UTF-8"?>
<!--
 AndiCar - a car management software for Android powered devices.

 Copyright (C) 2010 Miklos Keresztes (miklos.keresztes@gmail.com)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginRight="5dip"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        >
        <Button
            android:id="@+id/btnBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/BackupRestoreEditActivity_BackupBtnCaption"
            />
        <Button
            android:id="@+id/btnRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/BackupRestoreEditActivity_RestoreBtnCaption"
            />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/BackupRestoreEditActivity_DeleteBkBtnCaption"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <TextView
            android:layout_height="1dip"
            android:layout_width="fill_parent"
            android:background="@color/separator_bg"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/BackupRestoreEditActivity_BackupListLabel"
            />

        <ListView android:id="@+id/lvBackupList"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:drawSelectorOnTop="false"
                  android:choiceMode="singleChoice"
                  />
    </LinearLayout>
</LinearLayout>
